# varpulis-agent-runtime

./: .gitignore  .npmignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: ci.yml
crates/varpulis-agent-core/: Cargo.toml
crates/varpulis-agent-core/src/: action.rs  cooldown.rs  event.rs  lib.rs  runtime.rs  vpl_compiler.rs
crates/varpulis-agent-core/src/pattern/: budget_runaway.rs  circular_reasoning.rs  convergent_failure.rs  detector.rs  error_spiral.rs  mod.rs  retry_storm.rs  sase_detector.rs  stuck_agent.rs  token_velocity.rs
crates/varpulis-agent-python/: Cargo.toml
crates/varpulis-agent-python/src/: lib.rs
crates/varpulis-agent-wasm/: Cargo.toml
crates/varpulis-agent-wasm/src/: lib.rs
docs/: blog-post.md  show-hn.md
examples/claude-code-monitor/: README.md  varpulis_monitor.py
examples/custom-patterns/: README.md  main.py
examples/langchain-guardrails/: README.md  main.py
examples/langchain-real-demo/: README.md  main.py  with_langchain.py
examples/mcp-monitor/: README.md  index.ts
examples/standalone-browser/: README.md  index.html  main.js  package-lock.json  package.json
examples/standalone-node/: README.md  index.js  package-lock.json  package.json
patterns/: budget_runaway.vpl  circular_reasoning.vpl  error_spiral.vpl  retry_storm.vpl  stuck_agent.vpl
patterns/claude-code/: compaction_spiral.vpl  config_overwrite_violation.vpl  context_starvation.vpl  git_push_violation.vpl  intent_stall.vpl
patterns/langchain/: react_ping_pong.vpl  recursion_burnout.vpl
playground/: index.html
playground/wasm/: package.json  varpulis_agent_wasm.d.ts  varpulis_agent_wasm.js  varpulis_agent_wasm_bg.wasm
