[workspace]
resolver = "2"
members = [
    "crates/varpulis-agent-core",
    "crates/varpulis-agent-wasm",
    "crates/varpulis-agent-python",
]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
wasm-bindgen = "0.2"
pyo3 = { version = "0.23", features = ["extension-module"] }
varpulis-core = { path = "../cep/crates/varpulis-core" }
varpulis-sase = { path = "../cep/crates/varpulis-sase" }
varpulis-parser = { path = "../cep/crates/varpulis-parser" }
chrono = "0.4"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
